--- a/test.html
+++ b/test.html
@@ -8,22 +8,27 @@
           margin: 0px;
         }
         hr{
-          width: 98%;
           color: #000;
           background-color: #000;
+          width: 88%;
         }
         body{
           margin: 0px;
           padding: 0px;
           font-size: 1.3em;
           font-family: 'stag sans', arial;
-        }
+          }
         table{
           width: 100%;
-        }      
+        }
+        table.footer_outer{
+        
+        }
         table.footer_table{
+          font-size: 0.7em;
+          width: 80%;
+          margin-left:  55px;
           text-align: center;
-          width: 850px;
         }
         table.text_logo_table{
           height: 100px;
@@ -31,8 +36,8 @@
         }
         .terms{
           padding: 5px;
-          font-size: 0.9em;
-          margin-left: 750px;
+          font-size: 0.6em;
+        margin-left: 650px;
         }
         span.logo_text{
           font-size: 0.8em;
@@ -47,7 +52,7 @@
           background: -moz-radial-gradient(50% 25% , ellipse closest-side, #FFFFFF, #C8D724 120%) repeat scroll 0 0 #C8D724;
         }
         .right{
-          margin-top: 200px;
+          margin-top: 240px;
           padding-right: 60px;
         }
         .left{
@@ -57,14 +62,14 @@
           font-size: 3.5em;
         }
         .text_area.larger{
-          font-size: 1.5em;
+          font-size: 1em;
           padding-top: 15px;
         }
         .center_footer{
           padding-bottom: 10px;
         }
         .center_upper_imagebox{
-          padding-left: 280px;
+          padding-left: 190px;
           padding-top: 40px;
         }
       /*]]>*/
@@ -76,7 +81,7 @@
             <h1></h1>
           </div>
         </td>
-        <td class='center_main_table' width='650px'>
+        <td class='center_main_table' width='550px'>
           <div class='center_container' style="background-image: url('http://www.olacabs.com/img/campaigns/back_gradient.jpg')">
             <div class='center_upper'>
               <table class='center_upper_table'>
@@ -136,31 +141,37 @@
             </div>
             <hr />
             <div class='center_footer'>
-              <table class='footer_table'>
+              <table class='footer_outer'>
                 <tr>
                   <td>
-                    Track your cab on app&nbsp;&nbsp;&nbsp;|
-                  </td>
-                  <td>
-                    Same cab fare 24X7&nbsp;&nbsp;&nbsp;|
-                  </td>
-                  <td>
-                    Download the app from
-                  </td>
-                  <td>
-                    <a href='https://play.google.com/store/apps/details?id=com.olacabs.customer&amp;hl=en'>
-                      <img alt='google play logo' class='play_store' src='http://www.olacabs.com/img/campaigns/google_play.png' />
-                    </a>
-                  </td>
-                  <td>
-                    <a href='http://itunes.apple.com/in/app/ola-cabs/id539179365?mt=8'>
-                      <img alt='apple app store logo' class='app_store' src='http://www.olacabs.com/img/campaigns/app_store.png' />
-                    </a>
+                    <table class='footer_table'>
+                      <tr>
+                        <td>
+                          Track your cab on app&nbsp;|
+                        </td>
+                        <td>
+                          Same cab fare 24X7&nbsp;|
+                        </td>
+                        <td>
+                          Download the app from&nbsp;|
+                        </td>
+                        <td>
+                          <a href='https://play.google.com/store/apps/details?id=com.olacabs.customer&amp;hl=en'>
+                            <img alt='google play logo' class='play_store' src='http://www.olacabs.com/img/campaigns/google_play.png' />
+                          </a>
+                        </td>
+                        <td>
+                          <a href='http://itunes.apple.com/in/app/ola-cabs/id539179365?mt=8'>
+                            <img alt='apple app store logo' class='app_store' src='http://www.olacabs.com/img/campaigns/app_store.png' />
+                          </a>
+                        </td>
+                      </tr>
+                    </table>
                   </td>
                 </tr>
               </table>
               <div class='terms'>
-                T&C Apply
+                *T&C Apply
               </div>
             </div>
           </div>
