--- a/test.html
+++ b/test.html
@@ -43,13 +43,13 @@
           height: 130%;
         }
         .center_container{
-          background: rgb(152, 215, 43);
+          background: 
           background-image: -webkit-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(200, 215, 36) 38%);
           background-image: -ms-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(200, 215, 36) 38%);
           background-image: -o-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(200, 215, 36) 38%);
           background-image: radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(200, 215, 36) 38%);
           background-image: -moz-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(200, 215, 36) 38%);
-          background: -moz-radial-gradient(50% 25% , ellipse closest-side, #FFFFFF, #C8D724 120%) repeat scroll 0 0 #C8D724;
+          background: -moz-radial-gradient(50% 25% , ellipse closest-side, #FFFFFF, #FFBB00 120%) repeat scroll 0 0 #C8D724;
         }
         .right{
           margin-top: 240px;
@@ -67,6 +67,7 @@
         }
         .center_footer{
           padding-bottom: 10px;
+          font-size: 0.6em;
         }
         .center_upper_imagebox{
           padding-left: 190px;
@@ -81,12 +82,12 @@
             <h1></h1>
           </div>
         </td>
-        <td class='center_main_table' width='550px'>
-          <div class='center_container' style="background-image: url('&lt;I used an image to get some gradient effects to appear within emails&gt;')">
+        <td class='center_main_table' width='750px'>
+          <div class='center_container'>
             <div class='center_upper'>
               <table class='center_upper_table'>
                 <tr>
-                  <td class='imagebox' height='300px'>
+                  <td class='imagebox' height='500px'>
                     <div class='center_upper_imagebox'>
                       <img alt='center logo image' class='center_image' src='image_path' />
                     </div>
@@ -100,19 +101,21 @@
                   <td width='900px'>
                     <div class='left'>
                       <div class='huge_text'>
-                        Lorem Ipsum Lorem Ipsum Lorem Ipsum
+                        Lorem
                       </div>
                       <div class='huge_text'>
-                        Lorem Ipsum
+                        Ipsum
                       </div>
                       <div class='text_area larger'>
                         Lorem Ipsum Lorem Ipsum Lorem Ipsum
                       </div>
                       <div class='text_area larger'>
-                        Lorem Ipsum Lorem Ipsum Lorem Ipsum
-                      </div>
-                      <div class='text_area larger'>
-                        Lorem Ipsum Lorem Ipsum Lorem Ipsum
+                        <p>
+                          Lorem Ipsum Lorem Ipsum Lorem Ipsum
+                        </p>
+                        <p>
+                          Lorem Ipsum Lorem Ipsum Lorem Ipsum
+                        </p>
                       </div>
                     </div>
                   </td>
@@ -132,20 +135,20 @@
               <table class='footer_outer'>
                 <tr>
                   <td width='190px;'>
-                    lorem ipsum &nbsp;&nbsp;&nbsp;|
+                    lorem ipsum &nbsp|
                   </td>
                   <td width='170px;'>
-                    lorem ipsum 24X7&nbsp;&nbsp;&nbsp;|
+                    lorem ipsum 24X7&nbsp;|
                   </td>
                   <td width='190px;'>
                     lorem ipsum
                   </td>
-                  <td width='100px;'>
+                  <td>
                     <a href='https://foobarbaz.com'>
                       <img alt='foo bar baz' class='footer_image_one' src='image.png' />
                     </a>
                   </td>
-                  <td width='100px;'>
+                  <td>
                     <a href='http://foobarbaz.com'>
                       <img alt='foo bar baz' class='footer_image_two' src='image.png' />
                     </a>
